<resources>
    <string name="app_name">BudgetBuddy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BudgetBuddy</string>
    <string name="nav_header_subtitle">Track. Save. Prosper.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_expenses">Expenses</string>
    <string name="menu_budget">Budget</string>
    <string name="menu_home">Home</string>
    <string name="menu_wallet">My Wallet</string>
    <string name="menu_reports">Insights</string>
    <string name="menu_reminders">Reminders</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_backup">Backup</string>
    <string name="no_items_found">No items found</string>
    <string name="lbl_loading">Loading</string>
    <string name="rupee_symbol">\u20B9 %s</string>
    <string name="add_balance">Add Balance</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="submit">Submit</string>
    <string name="okay">Okay</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="currency_detail">Currency Detail</string>
    <string name="backup_detail">Backup Detail</string>
    <string name="permission_req">Enable Alarms</string>
    <string name="reminder_permission_msg">Please enable Alarms and reminders in settings</string>
    <string name="delete">Delete</string>
    <string name="del_msg">Are you sure want to delete the item?</string>
    <string name="add_expense">Add Expense</string>
    <string name="notes">Notes</string>
    <string name="spent_on">%s</string>
    <string name="enter_amount">Please enter an amount</string>
    <string name="add_budget">Add Budget</string>
    <string name="month_year">Month/Year</string>
    <string name="lbl_when">When</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="last_synced_on">Last Sync On</string>
    <string name="username">User Name</string>
    <string name="user_email">Email ID</string>
    <string name="wall_added_current_month">Added (This Month)</string>
    <string name="wall_avl_balance">Available Balance</string>
    <string name="wall_used_current_month">Used (This Month)</string>
    <string name="currency_name">Currency Name</string>
    <string name="currency_code">Currency Code</string>
    <string name="currency_symbol">Currency Symbol</string>
    <string name="redetect_currency">Re-detect Currency</string>
    <string name="lbl_elapsed">Elapsed</string>
    <string name="lbl_upcoming">Upcoming</string>
    <string name="sync_to_google_sheets">Sync to Google Sheets</string>
    <string name="not_synced">Not synced yet</string>
    <string name="lbl_signout">Signed out</string>
    <string name="lbl_expenses_today">Today Expenses </string>
    <string name="lbl_expenses_7_days">Last 7 days expenses</string>
    <string name="lbl_expenses_this_month">Current Month expenses</string>
    <string name="successfully_logout_from">Successfully signed out from %s</string>
    <string name="sync_success">Data synced successfully!</string>
    <string name="sync_fail">Data Sync failed!</string>
    <string name="sign_out">Sign out</string>

    <string name="default_web_client_id">161874295130-cj70qk48ndrd5ugkp60sr6e42dai4ajo.apps.googleusercontent.com</string>

    <string-array name="expense_types" >
        <item>Clothes</item>
        <item>Debt Payment</item>
        <item>Donation</item>
        <item>Education</item>
        <item>Entertainment</item>
        <item>Food</item>
        <item>Fuel</item>
        <item>Gift</item>
        <item>Groceries</item>
        <item>Health</item>
        <item>Insurance</item>
        <item>Others</item>
        <item>Rent</item>
        <item>Travel</item>
        <item>Vehicles</item>
    </string-array>
</resources>