<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_expenses">

    <fragment
        android:id="@+id/nav_expenses"
        android:name="com.dolphin.expenseease.ui.home.HomeFragment"
        android:label="@string/menu_expenses"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_budget"
        android:name="com.dolphin.expenseease.ui.budget.BudgetFragment"
        android:label="@string/menu_budget"
        tools:layout="@layout/fragment_budget" />

    <fragment
        android:id="@+id/nav_reports"
        android:name="com.dolphin.expenseease.ui.reports.ReportsFragment"
        android:label="@string/menu_reports"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/nav_reminders"
        android:name="com.dolphin.expenseease.ui.reminders.ReminderFragment"
        android:label="@string/menu_reminders"
        tools:layout="@layout/fragment_reminder" />

    <fragment
        android:id="@+id/nav_backup"
        android:name="com.dolphin.expenseease.ui.backup.BackupFragment"
        android:label="@string/menu_backup"
        tools:layout="@layout/fragment_backup" />
    <fragment
        android:id="@+id/nav_wallet"
        android:name="com.dolphin.expenseease.ui.wallet.WalletFragment"
        android:label="@string/menu_wallet"
        tools:layout="layout/fragment_wallet" />
</navigation>